--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <link rel="icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>To Do List</title>
+    <title>Booklist App</title>
   </head>
-  <body class="min-h-screen text-black dark:bg-slate-900 dark:text-slate-300">
+  <body class="min-h-screen bg-white text-black dark:bg-slate-900 dark:text-slate-300">
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
